@@ -1,3 +1,8 @@
+Tue Oct 23 06:12:39 2012  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/visitors/to_ruby.rb: Handle nil tags specially
+	  to avoid slow method_missing calls.  Thanks Kevin Menard!
+
 Tue Oct 23 06:07:57 2012  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* ext/psych/lib/psych/scalar_scanner.rb: Ignore bad timestamps.  If
